tests/invalid/try_detism.err_exp
try_detism.m:016: Error: the determinism declaration for [38;5;87m`p'(out, di, uo)[39;49m [38;5;203mis[39;49m
try_detism.m:016:   [38;5;203mnot satisfied.[39;49m
try_detism.m:016:   Declared [38;5;40m`cc_multi',[39;49m inferred [38;5;203m`cc_nondet'.[39;49m
try_detism.m:016:   The reason for the difference is the following.
try_detism.m:023:   In argument 1 of call to predicate `try_detism.q'/3:
try_detism.m:023:   unification with [38;5;87m`X'[39;49m [38;5;203mcan fail.[39;49m
try_detism.m:022: Error: call to predicate [38;5;87m`exception.magic_exception_result'/1[39;49m
try_detism.m:022:   with determinism `cc_multi' [38;5;203moccurs in a context which[39;49m
try_detism.m:022:   [38;5;203mrequires all solutions.[39;49m
try_detism.m:023:   Unification of [38;5;87m`X'[39;49m and [38;5;87m`V_17'[39;49m [38;5;203mcan fail.[39;49m
try_detism.m:022: In clause for `p(out, di, uo)':
try_detism.m:022:   in call to predicate `exception.try_io'/4:
try_detism.m:022:   mode error: arguments [38;5;87m`TryLambda',[39;49m [38;5;87m`TryResult',[39;49m
try_detism.m:022:   [38;5;87m`STATE_VARIABLE_IO_10'[39;49m and [38;5;87m`TryIOOutput'[39;49m have the following
try_detism.m:022:   insts:
try_detism.m:022:     /* unique */ (pred(out, di, uo) is semidet),
try_detism.m:022:     free,
try_detism.m:022:     unique,
try_detism.m:022:     free
try_detism.m:022:   which [38;5;203mdoes not match[39;49m any of the modes for predicate
try_detism.m:022:   `exception.try_io'/4.
try_detism.m:022:   The [38;5;87mfirst argument `TryLambda'[39;49m has inst
try_detism.m:022:     [38;5;203m/* unique */ (pred(out, di, uo) is semidet),[39;49m
try_detism.m:022:   which does not match any of those modes.
try_detism.m:022:   (For higher order insts like this, the mismatch is
try_detism.m:022:   sometimes caused by the arity of the predicate or function
try_detism.m:022:   being different in the inst than in the type.)
For more information, recompile with `-E'.
